# bardacle

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
assets/: LOGO-CONCEPT.md  logo-preview.html
docs/: adapters.md  faq.md  installation.md  quickstart.md  troubleshooting.md
src/: __init__.py  __main__.py  bardacle.py
test/: test_reliability.py
test/output/: session-state.md
test/transcripts/: test-session.jsonl
