[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bardacle"
version = "0.1.0"
description = "A metacognitive layer for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bob & Blair"}
]
keywords = ["ai", "agents", "memory", "metacognition", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "mypy",
]

[project.scripts]
bardacle = "bardacle:main"

[project.urls]
Homepage = "https://github.com/yourusername/bardacle"
Documentation = "https://github.com/yourusername/bardacle#readme"
Repository = "https://github.com/yourusername/bardacle"
Issues = "https://github.com/yourusername/bardacle/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
